--- a/package.json
+++ b/package.json
@@ -41,6 +41,8 @@
     ]
   },
   "devDependencies": {
-    "tailwindcss": "^4.1.4"
+    "postcss": "^8.5.3",
+    "postcss-cli": "^11.0.1",
+    "tailwindcss": "^3.4.17"
   }
 }
