--- a/package.json
+++ b/package.json
@@ -11,8 +11,10 @@
     "react": "^19.1.0",
     "react-dom": "^19.1.0",
     "react-intersection-observer": "^9.16.0",
+    "react-responsive-masonry": "^2.7.1",
     "react-router-dom": "^7.5.2",
     "react-scripts": "5.0.1",
+    "react-stack-grid": "^0.7.1",
     "typewriter-effect": "^2.21.0",
     "web-vitals": "^2.1.4"
   },
